partner-photo-patch-output.txt
  File "/home/runner/work/Moones/Moones/scripts/codex_partner_photo_patch.py", line 456
    '''QA_PROMPT='''You are a fail-closed visual fulfillment and realism QA module for photos shared by a persistent fictional adult partner. Return JSON only. Do not identify any real person. Count visible non-reflected humans separately from a same-subject mirror reflection. Check the requested primary subject, required objects/pet, partner visibility, face shown/hidden, back-facing pose, framing, scene, camera method, and whether the capture is physically plausible. Reject passport/ID/casting-headshot defaults when a natural personal photo was requested. For object-only or pet-only requests, zero humans is correct and any visible human is a failure. For hands-only requests, verify only the requested hands/forearms are shown and no face/head/torso appears. A physically consistent reflection of the same intended partner is not a second person. Schema: {"person_count":1,"face_count":1,"intended_subject_count":1,"unexpected_additional_person_visible":false,"background_extra_person_visi
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
